2007-06-15  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Nikon Coolpix series capture now determines
	  the captured filenames.

2007-06-05  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c, ptp.h, ptp-pack.c, library.c, config.c:
	  Started EOS 400D+ style capture support.

	* ptp.h: Added lots of new Canon Powershot specific defines.

2007-05-28  Paul Walmsley <paul@booyaka.com>

	* usb.c: replace gp_port_usb_check_int_fast() calls with
        timeout save/change/restore and gp_port_usb_check_int()

2007-05-25  Paul Walmsley <paul@booyaka.com>

	* library.c: fix bogus Canon EOS 5D USB product ID

2007-05-23  Marcus Meissner  <marcus@jet.franken.de>

	* config.c: Allow configuration of Exposure Bias Compensation

	* usb.c: Handle response instead of data answer (happens on failure).
	* ptp.c: Handle GetObjectHandles errors as non critical (Just as "0 handles").

2007-05-09  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.h, usb.c: Send/Receive control messages to class.
	* library.c: Added Kodak C653

2007-05-06  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Canon IXUS 75 aka PowerShot SD750.
	* library.c: Added Fuji FinePix S9500.
	* library.c: Added Motorola A1200 smart phone in MTP.

2007-04-16  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.h, library.c: Added some Canon EOS specific properties
	  and values.

	* library.c: Added PowerShot SD1000 aka IXUS 70.
	* library.c: Added Kodak Easyshare C743

2007-04-11  Marcus Meissner  <marcus@jet.franken.de>

	* Added Archos 504 MTP player.

2007-04-04  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Canon PowerShot A550
	* ptpip.c: Added major/minor version reporting.

2007-03-27  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Check for overflows in --summary.
	* library.c: Skip the 0xd201 property, it causes hangs.

2007-03-24  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added configuration of shooting mode.
